tests/baselines/reference/augmentedTypesEnum3.errors.txt
tests/cases/compiler/augmentedTypesEnum3.ts(16,5): error TS2432: In an enum with multiple declarations, only one declaration can omit an initializer for its first enum element.


==== tests/cases/compiler/augmentedTypesEnum3.ts (1 errors) ====
    module E {
        var t;
    }
    enum E { }
    
    enum F { }
    module F { var t; }
    
    module A {
        var o;
    }
    enum A {
        b
    }
    enum A {
        c
        ~
!!! error TS2432: In an enum with multiple declarations, only one declaration can omit an initializer for its first enum element.
    }
    module A {
        var p;
    }